--- a/vbox/vbox.vbproj
+++ b/vbox/vbox.vbproj
@@ -114,6 +114,9 @@
       <Name>Common_vb</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="Notes\Niche.txt" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.VisualBasic.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
